[gd_scene load_steps=6 format=3 uid="uid://6l04dyxe4w1x"]

[ext_resource type="Script" uid="uid://dwdqinj6xf7uc" path="res://scripts/ui/cutscene.gd" id="1_yn528"]
[ext_resource type="Script" uid="uid://cldlietyrt556" path="res://scripts/ui/cutscene_slide.gd" id="2_g6erw"]
[ext_resource type="Resource" uid="uid://budujoqf4wal" path="res://resources/cutscene/slide1.tres" id="3_oieux"]
[ext_resource type="Resource" uid="uid://u46qc6mk5u3t" path="res://resources/cutscene/slide2.tres" id="4_od77a"]
[ext_resource type="Resource" uid="uid://ktfmrerwvwub" path="res://resources/cutscene/slide3.tres" id="5_fsvy2"]

[node name="IntroCutscene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yn528")
slides = Array[ExtResource("2_g6erw")]([ExtResource("3_oieux"), ExtResource("4_od77a"), ExtResource("5_fsvy2")])

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="SlideContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SlideContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -3.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SlideImage" type="TextureRect" parent="SlideContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 450)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
expand_mode = 1

[node name="SlideText" type="RichTextLabel" parent="SlideContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
fit_content = true
horizontal_alignment = 1

[node name="ProgressLabel" type="Label" parent="SlideContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1

[node name="ContinueLabel" type="Label" parent="SlideContainer"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -90.0
offset_top = -23.0
offset_right = -2.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 20
text = "Space/Click"
horizontal_alignment = 1

[node name="SkipButton" type="Button" parent="."]
custom_minimum_size = Vector2(100, 40)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -8.0
offset_bottom = 8.0
grow_horizontal = 0
text = "Skip"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
